@@ -1,0 +1,27 @@
+// Item Stacking Restriction File
+// Prevents an item to be stacked more than x times in given
+// inventory types. Generally used by 3rd class related skill items.
+// Format: <item id>,<stack limit amount>,<type>
+// Type mask values:
+//  &1: Character inventory restriction
+//  &2: Character cart restriction
+//  &4: Account storage restriction
+//  &8: Guild storage restriction
+// Example:
+//  512,4,12  // Will not allow more than 4 Apples in storages.
+// Note:
+//  Stack limit of 0 will disable a restriction.
+
+// Rune Knight
+12725,20,1  // Nauthiz Rune
+12726,20,1  // Raido Rune
+12727,20,1  // Berkana Rune
+12728,20,1  // Isa Rune
+12729,20,1  // Othila Rune
+12730,20,1  // Uruz Rune
+12731,20,1  // Thurisaz Rune
+12732,20,1  // Wyrd Rune
+12733,20,1  // Hagalaz Rune
+
+// Arch Bishop
+12333,3,1  // Ancilla
